# gureli_asistan

./: agent.ipynb  analysis_agent.py  app.py  chatbot_api.py  crm.ipynb  crm_openai_ollama.ipynb  crm_subat.db  crm_subat.xlsx  crm_subat_output_ollama.xlsx  crm_subat_output_openai.xlsx  crm_subat_output_openai_ollama.xlsx  crm_subat_output_save.xlsx  crm_subat_small.xlsx  db_agent.py  db_agent_class.py  eguven_analysis_agent.py  gb.ipynb  gb_subat.xlsx  generate_batch.py  gradio_chat.py  load_chicago.ipynb  load_hrdata.ipynb  load_sales.ipynb  load_satislar.ipynb  new_app.py  pyproject.toml  requirements.txt  simple-graph.ipynb  stream_bot.py  tickets_output.jsonl  ~$crm_subat_output_openai.xlsx
static/: chatbot.html
