[project]
name = "asistan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.0",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "attrs==25.4.0",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "colorama==0.4.6",
    "dataclasses-json==0.6.7",
    "distro==1.9.0",
    "fastapi==0.118.3",
    "frozenlist==1.8.0",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.2",
    "idna==3.10",
    "jiter==0.11.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain==0.3.27",
    "langchain-community==0.3.31",
    "langchain-core==0.3.79",
    "langchain-openai==0.3.35",
    "langchain-text-splitters==0.3.11",
    "langgraph==0.6.10",
    "langgraph-checkpoint==2.1.2",
    "langgraph-prebuilt==0.6.4",
    "langgraph-sdk==0.2.9",
    "langsmith==0.4.34",
    "marshmallow==3.26.1",
    "multidict==6.7.0",
    "mypy-extensions==1.1.0",
    "numpy==2.3.3",
    "openai==2.3.0",
    "orjson==3.11.3",
    "ormsgpack==1.11.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "propcache==0.4.1",
    "pydantic==2.12.0",
    "pydantic-core==2.41.1",
    "pydantic-settings==2.11.0",
    "pyodbc==5.2.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "quickchart-io==2.0.0",
    "regex==2025.9.18",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.43",
    "sqlparse==0.5.3",
    "starlette==0.48.0",
    "tenacity==9.1.2",
    "tiktoken==0.12.0",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uvicorn==0.37.0",
    "xxhash==3.6.0",
    "yarl==1.22.0",
    "zstandard==0.25.0",
]
